--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -1,4 +1,4 @@
-<div class="login-page" dir="rtl">
+<div class="login-page" >
 
   <!-- Left visual section -->
   <div class="login-visual d-none d-lg-flex">
