--- a/src/app/shared/components/breadcrumb/breadcrumb.html
+++ b/src/app/shared/components/breadcrumb/breadcrumb.html
@@ -1,4 +1,4 @@
-<nav class="app-breadcrumb" dir="rtl" aria-label="breadcrumb">
+<nav class="app-breadcrumb"  aria-label="breadcrumb">
   <ol class="breadcrumb">
 
     <!-- Home -->
