--- a/src/app/shared/components/chart/budget-chart.html
+++ b/src/app/shared/components/chart/budget-chart.html
@@ -1,6 +1,6 @@
-<div class="card budget-chart-card" dir="rtl">
+<div class="card budget-chart-card" >
   <div class="card-header d-flex justify-content-between align-items-center">
-    <div class="fw-bold">بنود الموازنة</div>
+    <div class="fw-bold">بنود الموازنة  <i class="bi bi-box-seam"></i></div>
  <div class="text-center text-primary small mt-2">2025</div>
     <div class="d-flex gap-2">
       <button class="btn btn-light btn-sm">
