--- a/src/app/shared/components/contract-bar-status/contract-bar-status.html
+++ b/src/app/shared/components/contract-bar-status/contract-bar-status.html
@@ -1,4 +1,4 @@
-<div class="csb-wrapper" dir="rtl">
+<div class="csb-wrapper" >
   <span class="csb-percentage">{{ percentage }}%</span>
 
   <apx-chart
