--- a/src/app/shared/components/breadcrumb/breadcrumb.scss
+++ b/src/app/shared/components/breadcrumb/breadcrumb.scss
@@ -1,3 +1,12 @@
+.breadcrumb {
+  display: flex;
+}
+
+html[dir='rtl'] .breadcrumb {
+  flex-direction: row-reverse;
+}
+
+
 .app-breadcrumb {
   background: #ffffff;
   border-bottom: 1px solid #e5e7eb;
