--- a/src/app/shared/components/chart/budget-chart.scss
+++ b/src/app/shared/components/chart/budget-chart.scss
@@ -1,12 +1,12 @@
 .budget-chart-card {
   border-radius: 16px;
-      margin-left: 13px;
+      // margin-left: 13px;
   border: 1px solid #e5e7eb;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.04);
 }
 
 .card-header {
- background-color: #f7f7f7;
+ background-color: #ffffff;
   border-bottom: none;
   padding: 14px 16px;
   border-top-right-radius: 16px;
