--- a/src/app/shared/components/data-table/data-table.html
+++ b/src/app/shared/components/data-table/data-table.html
@@ -92,11 +92,11 @@
       />
     </td>
 
-    <td class="text-primary fw-semibold">{{ row.ref }}</td>
+    <td class="text-primary fw-semibold small">{{ row.ref }}</td>
     <td>{{ row.title }}</td>
     <td>{{ row.products }}</td>
     <td>
-      <i class="bi bi-chat-left-text"></i>
+      <i class="bi bi-chat-left-text small"></i>
       {{ row.notes }}
     </td>
 
